--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,7 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+
 }
 apply plugin: 'com.google.gms.google-services'
