--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,7 @@ dependencies {
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 
+    implementation 'com.stepstone.stepper:material-stepper:4.3.1'
+
 }
 apply plugin: 'com.google.gms.google-services'
