--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         <activity
             android:name=".RestaurantViewActivity"
             android:label="@string/title_activity_restaurant_view"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
+        <activity android:name=".BookingActivity"></activity>
     </application>
 
 </manifest>
