--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,11 +43,15 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-ads:15.0.1'
 
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 
     implementation 'com.stepstone.stepper:material-stepper:4.3.1'
+
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
