--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,13 @@
         <activity
             android:name=".UserFeedActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".RestaurantViewActivity"
             android:label="@string/title_activity_restaurant_view"
@@ -45,18 +51,12 @@
         <activity
             android:name=".LoginActivity"
             android:windowSoftInputMode="adjustResize">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".RegisterActivity"
             android:windowSoftInputMode="adjustResize"></activity>
         <activity
             android:name=".ProfileActivity"
-            android:label="@string/title_activity_profile"
             android:theme="@style/AppTheme"></activity>
     </application>
 
