--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,14 +50,14 @@
             android:label="@string/title_activity_maps" />
         <activity
             android:name=".LoginActivity"
-            android:windowSoftInputMode="adjustResize">
-        </activity>
-        <activity
-            android:name=".RegisterActivity"
             android:windowSoftInputMode="adjustResize"></activity>
         <activity
+            android:name=".RegisterActivity"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
             android:name=".ProfileActivity"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
+        <activity android:name=".SearchActivity"></activity>
     </application>
 
 </manifest>
