--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="in.restroin.restroin">
 
+    <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -15,7 +17,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <uses-library
@@ -23,6 +25,7 @@
             android:required="false" />
 
         <activity
+            android:screenOrientation="portrait"
             android:name=".UserFeedActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
@@ -31,8 +34,13 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value=".SearchActivity" />
         </activity>
         <activity
+            android:screenOrientation="portrait"
             android:name=".RestaurantViewActivity"
             android:label="@string/title_activity_restaurant_view"
             android:theme="@style/AppTheme" />
@@ -45,20 +53,32 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity
+        <activity android:screenOrientation="portrait"
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
-        <activity
+        <activity android:screenOrientation="portrait"
             android:name=".LoginActivity"
             android:windowSoftInputMode="adjustResize" />
-        <activity
+        <activity android:screenOrientation="portrait"
             android:name=".RegisterActivity"
             android:windowSoftInputMode="adjustResize" />
-        <activity
+        <activity android:screenOrientation="portrait"
             android:name=".ProfileActivity"
             android:theme="@style/AppTheme" />
-        <activity android:name=".SearchActivity" />
-        <activity android:name=".EditBooking"></activity>
+        <activity android:screenOrientation="portrait" android:name=".SearchActivity">
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity android:screenOrientation="portrait" android:name=".EditBooking" />
+        <activity android:screenOrientation="portrait" android:name=".ImageViewActivity" />
+        <activity android:screenOrientation="portrait" android:name=".ForgotPasswordActivity"></activity>
     </application>
 
 </manifest>
