--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,14 +25,14 @@
             android:required="false" />
 
         <activity
-            android:screenOrientation="portrait"
             android:name=".UserFeedActivity"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
 
             <meta-data
@@ -40,9 +40,9 @@
                 android:value=".SearchActivity" />
         </activity>
         <activity
-            android:screenOrientation="portrait"
             android:name=".RestaurantViewActivity"
             android:label="@string/title_activity_restaurant_view"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
         <activity android:name=".BookingActivity" />
 
@@ -53,19 +53,25 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:screenOrientation="portrait"
+        <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps" />
-        <activity android:screenOrientation="portrait"
+            android:label="@string/title_activity_maps"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".LoginActivity"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
-        <activity android:screenOrientation="portrait"
+        <activity
             android:name=".RegisterActivity"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
-        <activity android:screenOrientation="portrait"
+        <activity
             android:name=".ProfileActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
-        <activity android:screenOrientation="portrait" android:name=".SearchActivity">
+        <activity
+            android:name=".SearchActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
@@ -73,12 +79,24 @@
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
 
-                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:screenOrientation="portrait" android:name=".EditBooking" />
-        <activity android:screenOrientation="portrait" android:name=".ImageViewActivity" />
-        <activity android:screenOrientation="portrait" android:name=".ForgotPasswordActivity"></activity>
+        <activity
+            android:name=".EditBooking"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ImageViewActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ForgotPasswordActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".SplashScreenActivity" android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
